k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service

spec:
  type: ClusterIP

  selector:
    app: node-app

  ports:
  - port: 80
    targetPort: 3000
